gccida/c0/reg_preferred_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_preferred_class/src/regclass.c:1361:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class  reg_preferred_class( int regno) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_preferred_class/src/regclass.c:1363:6: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
if ( reg_pref_0 ) 
     ^~~~~~~~~~
     reg_pref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_preferred_class/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_preferred_class/src/regclass.c:1364:8: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
return reg_pref_0[regno].prefclass; 
       ^~~~~~~~~~
       reg_pref
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_preferred_class/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reg_preferred_class/src/obj/regclass.o] Error 1
